--- a/cloud-learning/package.json
+++ b/cloud-learning/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.10.0",
     "lucide-react": "^0.523.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
